# voxel_grid_tracking

./: .gitignore  CMakeLists.txt  PolarGridTrackingConfig.cmake  README.md  TODOs.txt  package.xml  polar_grid_tracking.cmake  polar_grid_tracking.kdev4
config/: PolarGridTracking.rviz  SVMTracking.rviz  VoxelGridTracking.rviz  VoxelGridTrackingVerdino.rviz  initialViewVoxelGridTracking.rviz  octomap.yaml  polar_grid_tracking.rviz
launch/: NavigationAndTracking.launch  PolarGridTracking.launch  SVMTrackingResults.launch  VoxelGridTracking.launch  VoxelGridTrackingELAS.launch  VoxelGridTrackingETHZ.launch  VoxelGridTrackingFinal.launch  VoxelGridTrackingResults.launch  VoxelGridTrackingVerdino.launch  bagVoxelGridTracking.launch  launch.launch  polar_grid_tracking.launch  polar_grid_tracking.old.launch  simulation.launch  testPolarGridTracking.launch  voxel_tracking_sequence_reader.launch
libs/: libElas.cmake
msg/: Vector2.msg  point_2d.msg  roiArray.msg  roi_and_speed_2d.msg  roi_and_speed_3d.msg  voxel_tracker_time_stats.msg
params/: base_local_planner_params.yaml  eth.yaml  global_costmap_common_params.yaml  local_costmap_common_params.yaml  local_costmap_params.yaml  local_costmap_params_verdino.yaml  svm_pedestrian_tracking_params.yaml  verdino.yaml  voxel_tracking_default_params.yaml  voxel_tracking_final_params.yaml  voxel_tracking_verdino_params.yaml
src/: CMakeLists.txt  ObstaclesFromStereo.cpp  ObstaclesFromStereo.h  cell.cpp  cell.h  libvisohelper.cpp  libvisohelper.h  main.cpp  mainStereoAndOdom.cpp  mainStixels.cpp  main_ros.cpp  main_voxel.cpp  obstacle.cpp  obstacle.h  params_structs.h  particle.cpp  particle.h  particle3d.cpp  particle3d.h  polarcell.cpp  polarcell.h  polargridtracking.cpp  polargridtracking.h  polargridtrackingros.cpp  polargridtrackingros.h  stixelsapplicationros.cpp  stixelsapplicationros.h  utils.cpp  utils.h  utilspolargridtracking.cpp  utilspolargridtracking.h  voxel.cpp  voxel.h  voxelgridtracking.cpp  voxelgridtracking.h  voxelobstacle.cpp  voxelobstacle.h
src/MainStereoAndOdom/: ReadCalibrationParameters.cpp  ReadCalibrationParameters.h
src/libviso2/: viso_stereo.cpp
src/sequence_reader/: calibrationmanager.cpp  groundtruthmanager.cpp  groundtruthmanager.h
src/stereo_and_odom/: calibrationmanager.h  groundtruthmanager.cpp
src/svm_detection/: main_svm_pedestrian_tracking.cpp  svm_pedestrian_tracking.cpp  svm_pedestrian_tracking.h
