cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

project(PolarGridTracking)

# set(OpenCV_DIR "/usr/local/share/OpenCV")
# set(PCL_DIR "/usr/local/share/pcl-1.6")

# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frounding-math")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffast-math -unroll-loops -march=native -std=c++0x -fopenmp -msse3")
# set(CMAKE_LINK_LIBRARY_FLAG "${CMAKE_LINK_LIBRARY_FLAG} -fopenmp")

set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
# find_package(OMPL    REQUIRED )
# find_package(Boost REQUIRED)
# set(Boost_USE_STATIC_LIBS OFF) 
# set(Boost_USE_MULTITHREADED ON)  
# set(Boost_USE_STATIC_RUNTIME OFF) 
find_package(Boost 1.49.0 COMPONENTS filesystem system)
# find_package(Boost 1.49.0)
# find_package(CUDA 5.0 REQUIRED)
find_package( Eigen3    REQUIRED )
find_package(OpenCV  REQUIRED )
# find_package(Motif  REQUIRED )
# find_package(Protobuf REQUIRED)
# find_package(Threads REQUIRED)
# find_package(OpenMP REQUIRED)
# find_package(OpenGL REQUIRED)
# find_package(GLUT REQUIRED)
# find_package(PCL REQUIRED)
find_package(PCL 1.6 REQUIRED)
# find_package(CGAL REQUIRED)
# find_package(GMP REQUIRED)
# find_package(MPFR REQUIRED)

set (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
# add_subdirectory(tutorials)
add_subdirectory(src)